--- a/login.html
+++ b/login.html
@@ -12,63 +12,32 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <style>
-    html, body{
-      height: 100%;
-    }
-
-    body {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-align: center;
-      align-items: center;
-      padding-top: 40px;
-      padding-bottom: 40px;
-      background-color: #f5f5f5;
-    }
-
-    .signin {
-      width: 100%;
-      max-width: 330px;
-      padding: 15px;
-      margin: auto;
-    }
-  </style>
+  <!-- Main css -->
+  <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
-	<img class="wave" src="img/wave.png">
-	<div class="container">
-		<div class="img">
-			<img src="img/bg.svg">
-		</div>
-		<div class="login-content">
-			<form action="index.html">
-				<img src="img/avatar.svg">
-				<h2 class="title">Welcome</h2>
-           		<div class="input-div one">
-           		   <div class="i">
-           		   		<i class="fas fa-user"></i>
-           		   </div>
-           		   <div class="div">
-           		   		<h5>Username</h5>
-           		   		<input type="text" class="input">
-           		   </div>
-           		</div>
-           		<div class="input-div pass">
-           		   <div class="i"> 
-           		    	<i class="fas fa-lock"></i>
-           		   </div>
-           		   <div class="div">
-           		    	<h5>Password</h5>
-           		    	<input type="password" class="input">
-            	   </div>
-            	</div>
-            	<a href="#">Forgot Password?</a>
-            	<input type="submit" class="btn" value="Login">
-            </form>
-        </div>
-    </div>
+  <div class="main">
+    <div class="container">
+      <div class="img">
+        <img src="img/login img.svg">
+      </div>
+      <div class="content">
+        <form>
+          <h2 class="title">Iniciar Sesión</h2>
+                     <div class="data">
+                       <h5>Usuario</h5>
+                         <input type="text" name="user" placeholder="Ingrese su usuario" required>
+                     </div>
+                     <div class="data">
+                        <h5>Contraseña</h5>
+                        <input type="password" name="password" placeholder="Ingrese su contraseña" required>
+                    </div>
+                 <input type="button" role="link" onclick="location.href=`index.html`" value="Login"></input>
+               </form>
+           </div>
+       </div>
+       <img class="wave" src="img/wave.svg">
+  </div>
 </body>
 </html>
