--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
                         <h5>Contraseña</h5>
                         <input type="password" name="password" placeholder="Ingrese su contraseña" required>
                     </div>
-                 <input type="button" role="link" onclick="location.href=`index.html`" value="Login"></input>
+                 <input type="submit" role="link" onclick="location.href=`index.html`" value="Login"></input>
                </form>
            </div>
        </div>
