--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
 <html lang="en">
   <head>
-    <script src="js/login.js"></script>
-    <meta http-equiv="refresh" content="0;URL=login.html" id="refresh">
+    <!-- <script src="js/login.js"></script>
+    <meta http-equiv="refresh" content="0;URL=login.html" id="refresh"> -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
