--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
-        <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
-        <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
-        <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <a class="py-2 d-none d-md-inline-block" class="link" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" class="link" href="categories.html">Categorías</a>
+        <a class="py-2 d-none d-md-inline-block" class="link" href="products.html">Productos</a>
+        <a class="py-2 d-none d-md-inline-block" class="link" href="sell.html">Vender</a>
+        <a class="py-2 d-none d-md-inline-block" class="link" href="cart.html">Mi carrito</a>
+        <a class="py-2 d-none d-md-inline-block" id="name"></a>
       </div>
     </nav>
     <main role="main">
@@ -105,5 +106,6 @@
     </footer>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/showName.js"></script>
   </body>
 </html>
