--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" class="link" href="index.html">Inicio</a>
-        <a class="py-2 d-none d-md-inline-block" class="link" href="categories.html">Categorías</a>
-        <a class="py-2 d-none d-md-inline-block" class="link" href="products.html">Productos</a>
-        <a class="py-2 d-none d-md-inline-block" class="link" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" class="link" href="cart.html">Mi carrito</a>
-        <a class="py-2 d-none d-md-inline-block" id="name"></a>
+        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
+        <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
+        <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
+        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <li id="options"> <a class="py-2 d-none d-md-inline-block" role="button" id="name"></a>
+        <ul style="display:none">
+          <li><a href="my-profile.html">Mi perfil</a></li>
+          <li><a href="login.html" id="logOut">Cerrar Sesión</a></li>
+        </ul>
+        </li>
       </div>
     </nav>
     <main role="main">
