--- a/product-info.html
+++ b/product-info.html
@@ -23,6 +23,12 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <li id="options"> <a class="py-2 d-none d-md-inline-block" role="button" id="name"></a>
+      <ul style="display:none">
+        <li><a href="my-profile.html">Mi perfil</a></li>
+        <li><a href="login.html" id="logOut">Cerrar Sesión</a></li>
+      </ul>
+      </li>
     </div>
   </nav>
   <div class="container p-5">
@@ -54,6 +60,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+  <script src="js/showName.js"></script>
 </body>
 
 </html>
