--- a/products.html
+++ b/products.html
@@ -21,6 +21,12 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <li id="options"> <a class="py-2 d-none d-md-inline-block" role="button" id="name"></a>
+        <ul style="display:none">
+          <li><a href="my-profile.html">Mi perfil</a></li>
+          <li><a href="login.html" id="logOut">Cerrar Sesión</a></li>
+        </ul>
+        </li>
       </div>
     </nav>
     <main role="main" class="pb-5">
@@ -86,5 +92,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/products.js"></script>
+    <script src="js/showName.js"></script>
   </body>
 </html>
