--- a/products.html
+++ b/products.html
@@ -39,13 +39,13 @@
                 <div class="col text-right">
                     <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
                         <label class="btn btn-light active" id="sortAsc" >
-                            <input type="radio" name="options" autocomplete="off" checked>MENOR PRECIO
+                            <input type="radio" name="options" autocomplete="off" checked><i class="fas fa-sort-amount-down-alt"></i> MENOR PRECIO
                         </label>
                         <label class="btn btn-light" id="sortDesc" >
-                            <input type="radio" name="options" autocomplete="off">MAYOR PRECIO
+                            <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-up"></i> MAYOR PRECIO
                         </label>
                         <label class="btn btn-light" id="sortByCount" >
-                            <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>RELEVANCIA
+                            <input type="radio" name="options" autocomplete="off"><i class="fas fa-star"></i> RELEVANCIA
                         </label>
                     </div>
                 </div>
