--- a/product-info.html
+++ b/product-info.html
@@ -12,7 +12,9 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/product_info.css">
 </head>
 
 <body>
@@ -31,14 +33,26 @@
       </li>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 3 (Fecha de entrega: 13/09/2020) y Entrega 4 (Fecha de entrega: 20/09/2020).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+  <main class="container p-5">
+    <div class="row">
+       <div id="images" class="col-3"> </div>
+        <div class="col">
+           <div class="d-flex w-100 justify-content-between">
+               <h4 id="prodName" class="mb-1 name"></h4>
+               <small id="sold" class="text-muted"></small>
+          </div>
+         <p id="desc" class="mb-1 desc"></p>
+          <br>
+          <div class="d-flex w-100">
+            <h5 id="cost"></h5>
+            <button type="button" class="btn btn-light"> Agregar al <i class="fas fa-cart-plus"></i></button>
+          </div>
+          <small id="category" class="text-muted"></small>
+          </div>
     </div>
-  </div>
+
+    <div id="relatedProducts" ></div>
+  </main>
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
