--- a/product-info.html
+++ b/product-info.html
@@ -51,7 +51,7 @@
           </div>
     </div>
 
-    <div id="relatedProducts" ></div>
+    <div id="relatedProducts" class="row" ></div>
   </main>
   <footer class="text-muted">
     <div class="container">
