--- a/login.html
+++ b/login.html
@@ -18,20 +18,6 @@
 
 
 <body>
-    <!-- <div class="login">
-
-      <form>
-         <h5>Usuario</h5>
-         <input type="text" id="user" placeholder="Ingrese su usuario">
-         <h5>Contraseña</h5>
-         <input type="password" id="password" placeholder="Ingrese su contraseña">
-      </form>
-
-      <div id="alert"></div>
-      <button id="btn">Login</button>
-
-    </div> -->
-
     <img class="wave" src="img/wave.svg">
 	<div class="container">
 		<div class="img">
@@ -65,9 +51,10 @@
             </form>
         </div>
     </div>
-  
-  <script src="js/login.js"></script>
-  <script src="js/login-focus.js"></script>
+
+<!-- Mis script -->
+<script src="js/login.js"></script>
+<script src="js/login-focus.js"></script>
 </body>
 </html>
 
