--- a/login.html
+++ b/login.html
@@ -24,7 +24,8 @@
 			<img src="img/login img.svg">
 		</div>
 		<div class="login-content">
-			<form method="POST">
+			<div><button type="button" class="btn btn-info btn-block" id="googleLogin">Login with Google</button></div>
+			<form method="POST" id="form_login">
 				<div id="login">
           <img src="img/login 2.png">
         </div>
@@ -33,8 +34,8 @@
            		   		<i class="fas fa-user"></i>
            		   </div>
            		   <div class="div">
-           		   		<h5>Usuario</h5>
-           		   		<input id="user" type="text" class="input">
+           		   		<h5>Email</h5>
+           		   		<input id="email" type="text" class="input">
            		   </div>
            		</div>
            		<div class="input-div pass">
@@ -52,7 +53,19 @@
         </div>
     </div>
 
-<!-- Mis script -->
+<!-- SDK FIREBASE -->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
+  <!-- Don't change the format for any other products. -->
+  <!-- etc. -->
+
+  <!-- Mis script -->
 <script src="js/login.js"></script>
 <script src="js/login-focus.js"></script>
 </body>
