--- a/login.html
+++ b/login.html
@@ -34,8 +34,8 @@
            		   		<i class="fas fa-user"></i>
            		   </div>
            		   <div class="div">
-           		   		<h5>Email</h5>
-           		   		<input id="email" type="text" class="input">
+           		   		<h5>Usuario</h5>
+           		   		<input id="user" type="text" class="input">
            		   </div>
            		</div>
            		<div class="input-div pass">
