--- a/login.html
+++ b/login.html
@@ -24,7 +24,10 @@
 			<img src="img/login img.svg">
 		</div>
 		<div class="login-content">
-			<div><button type="button" class="btn btn-info btn-block" id="googleLogin">Login with Google</button></div>
+			<div>
+				<button type="button" class="btn btn-info btn-block" id="googleLogin">Google</button>
+				<button type="button" class="btn btn-info btn-block" id="facebookLogin">Facebook</button>
+			</div>
 			<form method="POST" id="form_login">
 				<div id="login">
           <img src="img/login 2.png">
