--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 		<div class="login-content">
 			<div>
 				<button type="button" class="btn btn-info btn-block" id="googleLogin">Google</button>
-				<button type="button" class="btn btn-info btn-block" id="GitHubLogin">GitHub</button>
+				<button type="button" class="btn btn-info btn-block" id="GitHubLogin">Git-Hub</button>
 			</div>
 			<form method="POST" id="form_login">
 				<div id="login">
