--- a/login.html
+++ b/login.html
@@ -52,8 +52,9 @@
             	</div>
               <div id="alert"></div>
 				<input id="btn" type="submit" class="btn" value="Ingresar">
-				<input class="btn-google" type="button" role="button" id="googleLogin" value="Ingresar con Google">
-				<input class="btn-google" type="button" role="button" id="GitHubLogin" value="Ingresar con GitHub">
+				<input type="image" src="img/logo-google.svg" class="btn-social" id="googleLogin">
+				<input type="image" src="img/logo-github.svg" class="btn-social" id="gitHubLogin">
+				<input type="image" src="img/logo-facebook.svg" class="btn-social" id="facebookLogin">
 			</form>
 		</div>
 		
