--- a/my-profile.html
+++ b/my-profile.html
@@ -10,24 +10,10 @@
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/39f5ea38a7.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
@@ -51,14 +37,98 @@
       </div>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 7 (Fecha de entrega: 8/11/202020) -> Punto 1 y 2.</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+
+  <main class="mt-5 pt-4">
+    <div class="container wow fadeIn">
+      <div class="row">
+        <div class="col-md-6 mb-4">
+          <!-- Datos del perfil -->
+          <div class="card">
+            <div class="card-body">
+
+              <!-- Avatar -->
+              <div class="row justify-content-center">
+                <div class="col-md-3 mb-4 justify-content-center custom-circle-image" style="margin: 0%;">
+                    <img id="avatar" class="rounded-circle img-fluid" src="img/avatar.svg">
+                    <div class="row justify-content-center">
+                      <input type="file" name="" id="image_file" accept="image/*" style="display: none;">
+                      <div>
+                        <br>
+                        <button type="button" class="btn btn-primary btn-sm" ><label type="button" for="image_file" style="margin: 0%;">Cambiar Foto</label></button>
+                      </div>
+                    </div>
+                </div>
+              </div>
+              <hr>
+              
+              <div class="row">
+                <!--Nombres-->
+                <div class="col-md-6 mb-2">
+                  <div class="md-form ">
+                    <label for="firstName" class="">Nombres</label>
+                    <input type="text" id="firstName" class="form-control data" autocomplete="on">
+                  </div>
+                </div>
+                <!--Apellidos-->
+                <div class="col-md-6 mb-2">
+                  <div class="md-form">
+                    <label for="lastName" class="">Apellidos</label>
+                    <input type="text" id="lastName" class="form-control data" autocomplete="on">
+                  </div>
+                </div>
+              </div>
+              <br>
+
+              <div class="row">
+                <!--Celular-->
+                <div class="col-md-6 mb-2">
+                  <div class="md-form">
+                    <label for="phone" class="">Celular</label>
+                    <input type="number" id="phone" class="form-control" autocomplete="on">
+                  </div>
+                </div>
+                <!--Edad-->
+                <div class="col-md-6 mb-2">
+                  <label for="age" class="">Cumpleaños</label>
+                  <input type="date" id="age" class="form-control data" autocomplete="off">
+                </div>
+              </div>
+              <br>
+
+              <div class="row">
+                <!--email-->
+                <div class="col-md-12 mb-2">
+                  <div class="md-form">
+                    <label for="email" class="">Email</label>
+                    <input type="text" id="email" class="form-control data" autocomplete="on">
+                  </div>
+                </div>
+              </div>
+  
+            </div>
+          </div>
+        </div>
+
+        <!-- Img -->
+        <div class="col-md-6 mb-4">
+          <div>
+            <img class="img-fluid img" src="img/profile.svg" alt="">
+          </div>
+          <br>
+        <!-- Btn para editar perfil -->
+          <div class="row d-flex justify-content-center">
+            <button type="button" id="edit" class="col-md-3 btn btn-primary">Editar Perfil</button>
+          </div>
+        <!-- Btns para guardar y cancelar -->
+          <div class="row btn-group d-flex justify-content-center">
+            <button type="button" id="save" class="col-md-4 btn btn-secondary" style="display: none;" >Guardar</button>
+            <button type="button" id="cancel" class="col-md-4 btn btn-dark" style="display: none;" >Cancelar</button>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+  </main>
+
   <footer class="text-muted bg-light">
     <div class="container">
       <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
