--- a/products.html
+++ b/products.html
@@ -81,9 +81,7 @@
                   </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="list-group" id="cat-list-container">
-                </div>
+            <div class="row mb-4" id="cat-list-container">
             </div>
         </div>
     </main>
