--- a/cart.html
+++ b/cart.html
@@ -60,7 +60,7 @@
 <main class="mt-5 pt-4">
   <div class="container wow fadeIn">
     <div class="row">
-      <div class="col-md-8 mb-4">
+      <div id="form" class="col-md-8 mb-4">
         <!-- Formulario de envio -->
         <div class="card">
           <div class="card-body">
@@ -182,11 +182,11 @@
         </div>
         <!--Formulario-->
       </div>
-      <div class="col-md-4 mb-4">
+      <div id="myCart" class="col-md-4 mb-4">
 
         <!-- Main img -->
         <div class="mb-4">
-          <img class="img-fluid" src="img/cart.svg" alt="">
+          <img class="img-fluid img" src="img/cart.svg" alt="">
         </div>
 
         <!-- Heading -->
